--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.solucom.community" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".ApplicationController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,15 +24,7 @@
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="fr.solucom.community.MainActivity" />
-        </activity>
-        <activity
-            android:name=".News"
-            android:label="@string/title_activity_news"
-            android:parentActivityName=".MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="fr.solucom.community.MainActivity" />
+                android:value="fr.solucom.community.SettingsActivity" />
         </activity>
     </application>
 
